--- a/conf/inference.yml
+++ b/conf/inference.yml
@@ -31,7 +31,8 @@ models:
       # trtllm config.
       FORCE_CPU_ONLY_INPUT_TENSORS: no
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/Qwen2-7B-Instruct/trt_engines/fp16_4gpu/ # path of model. Must be set.
+      gpt_model_path: /tmp/Qwen2-7B-Instruct/trt_engines/fp16_4gpu/ # path of decoder model. Must be set.
+      encoder_model_path: # path of encoder model. Null if not set.
       max_tokens_in_paged_kv_cache: # use default if not set.
       max_attention_window_size: # use default (i.e. max_sequence_length) if not set.
       sink_token_length: # use default if not set.
