--- a/conf/inference_chatglm3.yml
+++ b/conf/inference_chatglm3.yml
@@ -30,6 +30,12 @@ models:
         - 64796 # "<|assistant|>"
         - 64797 # "<|observation|>"
       force_tokens_dict: # will be used to force map tokens to ids when encode and decode. Empty if not set.
+        - token: "<unk>"
+          id: 0
+        - token: "<s>"
+          id: 1
+        - token: "</s>"
+          id: 2
         - token: "[MASK]"
           id: 64789
         - token: "[gMASK]"
