ADD: Add trtllm0.12.0 and glm4 support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,12 +200,12 @@ include_directories(
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/tokenizers-cpp)
 
 #------------------- Jinja2cpp -------------------
-set(JINJA2CPP_BUILD_SHARED TRUE)
-set(JINJA2CPP_PATH /usr/local/jinja2cpp)
-set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${JINJA2CPP_PATH}/lib/jinja2cpp)
-find_package(jinja2cpp REQUIRED)
-include_directories(${JINJA2CPP_PATH}/include)
-install(DIRECTORY /usr/local/jinja2cpp/lib/ DESTINATION lib FILES_MATCHING PATTERN "*.so*")
+#set(JINJA2CPP_BUILD_SHARED TRUE)
+#set(JINJA2CPP_PATH /usr/local/jinja2cpp)
+#set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${JINJA2CPP_PATH}/lib/jinja2cpp)
+#find_package(jinja2cpp REQUIRED)
+#include_directories(${JINJA2CPP_PATH}/include)
+#install(DIRECTORY /usr/local/jinja2cpp/lib/ DESTINATION lib FILES_MATCHING PATTERN "*.so*")
 
 add_subdirectory(src)
 
