--- a/conf/inference_qwen2.5-coder.yml
+++ b/conf/inference_qwen2.5-coder.yml
@@ -12,7 +12,7 @@ models:
 
       # tokenizer config.
       tokenizer_type: huggingface # can be `huggingface`, `sentencepiece`. Must be set.
-      tokenizer_path: /tmp/Qwen2.5-7B-Instruct/ # path of tokenizer. Must be set.
+      tokenizer_path: /tmp/Qwen2.5-Coder-7B-Instruct/ # path of tokenizer. Must be set.
       tokenizer_parallelism: 16 # tokenizers count for parallel tokenization. Will be set to 1 if not set.
       end_token_id: 151645 # "<|im_end|>"
       pad_token_id: 151643 # "<|endoftext|>"
@@ -39,7 +39,7 @@ models:
 
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/Qwen2.5-7B-Instruct/trt_engines/ # path of decoder model. Must be set.
+      gpt_model_path: /tmp/Qwen2.5-Coder-7B-Instruct/trt_engines/ # path of decoder model. Must be set.
       encoder_model_path: # path of encoder model. Null if not set.
       stop_words: # additional stop words. Empty if not set.
         - "<|im_start|>"
