FIX: Fix docker build err.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,7 @@
 
 # --------Building stage.--------
 FROM registry.cn-hangzhou.aliyuncs.com/opengrps/grps_gpu:grps1.1.0_cuda12.5_cudnn9.2_trtllm0.12.0_py3.10 AS build
+ENV LD_LIBRARY_PATH /usr/local/cuda/compat/lib.real:$LD_LIBRARY_PATH
 
 # grps archive.
 RUN mkdir -p /my_grps
@@ -18,6 +19,9 @@ RUN cd /my_grps && \
 
 # --------Release stage.--------
 FROM registry.cn-hangzhou.aliyuncs.com/opengrps/grps_gpu:grps1.1.0_cuda12.5_cudnn9.2_trtllm0.12.0_py3.10
+ENV LD_LIBRARY_PATH /usr/local/cuda/compat/lib.real:$LD_LIBRARY_PATH
+
+RUN ln -s /usr/local/cuda/compat/lib.real /usr/local/cuda/compat/lib
 
 WORKDIR /my_grps
 COPY --from=build /my_grps/server.mar /my_grps/server.mar
