MOD: Mod readme.

--- a/conf/inference_llama3.yml
+++ b/conf/inference_llama3.yml
@@ -7,7 +7,7 @@ models:
     inferer_path:
     inferer_args: # more args of model inferer.
       # llm style used to build prompt(chat or function call) and parse generated response for openai interface.
-      # Current support {`qwen2.5`, `qwen`, `chatglm3`, `glm4`}.
+      # Current support {`qwen2.5`, `qwen`, `chatglm3`, `glm4`, `internlm2`}.
       llm_style: llama3
 
       # tokenizer config.
