--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ if (CUDA_ENABLE)
     find_package(CUDA REQUIRED)
     message(STATUS "CUDA_TOOLKIT_ROOT_DIR: ${CUDA_TOOLKIT_ROOT_DIR}")
     message(STATUS "CUDA_VERSION: ${CUDA_VERSION}")
-    set(CUDA_INCLUDE_DIRS "${CUDA_TOOLKIT_ROOT_DIR}-${CUDA_VERSION}/include")
+    set(CUDA_INCLUDE_DIRS "${CUDA_TOOLKIT_ROOT_DIR}-${CUDA_VERSION}/targets/x86_64-linux/include/")
     message(STATUS "CUDA_INCLUDE_DIRS: ${CUDA_INCLUDE_DIRS}")
     message(STATUS "CUDA_LIBRARIES: ${CUDA_LIBRARIES}")
     message(STATUS "CUDA_CUBLAS_LIBRARIES: ${CUDA_CUBLAS_LIBRARIES}")
