--- a/conf/inference_internvl2-1B.yml
+++ b/conf/inference_internvl2-1B.yml
@@ -8,11 +8,11 @@ models:
     inferer_args: # more args of model inferer.
       # llm style used to build prompt(chat or function call) and parse generated response for openai interface.
       # Support llm_style see README.md.
-      llm_style: qwen2.5
+      llm_style: internvl2-qwen2
 
       # tokenizer config.
       tokenizer_type: huggingface # can be `huggingface`, `sentencepiece`. Must be set.
-      tokenizer_path: /tmp/Qwen2.5-Coder-7B-Instruct/ # path of tokenizer. Must be set.
+      tokenizer_path: /tmp/InternVL2-1B/ # path of tokenizer. Must be set.
       tokenizer_parallelism: 16 # tokenizers count for parallel tokenization. Will be set to 1 if not set.
       end_token_id: 151645 # "<|im_end|>"
       pad_token_id: 151643 # "<|endoftext|>"
@@ -20,26 +20,56 @@ models:
         - 151643 # "<|endoftext|>"
         - 151644 # "<|im_start|>"
         - 151645 # "<|im_end|>"
-        - 151646 # "<|object_ref_start|>"
-        - 151647 # "<|object_ref_end|>"
-        - 151648 # "<|box_start|>"
-        - 151649 # "<|box_end|>"
-        - 151650 # "<|quad_start|>"
-        - 151651 # "<|quad_end|>"
-        - 151652 # "<|vision_start|>"
-        - 151653 # "<|vision_end|>"
-        - 151654 # "<|vision_pad|>"
-        - 151655 # "<|image_pad|>"
-        - 151656 # "<|video_pad|>"
+        - 151646 # "<img>"
+        - 151647 # "</img>"
+        - 151648 # "<IMG_CONTEXT>"
+        - 151649 # "<quad>"
+        - 151650 # "</quad>"
+        - 151651 # "<ref>"
+        - 151652 # "</ref>"
+        - 151653 # "<box>"
+        - 151654 # "</box>"
       force_tokens_dict: # will be used to force map tokens to ids when encode and decode instead of using tokenizer. Empty if not set.
-      #  - token: "<|endoftext|>"
-      #    id: 151643
+        - token: "<img>"
+          id: 151646
+        - token: "</img>"
+          id: 151647
+        - token: "<IMG_CONTEXT>"
+          id: 151648
+        - token: "<quad>"
+          id: 151649
+        - token: "</quad>"
+          id: 151650
+        - token: "<ref>"
+          id: 151651
+        - token: "</ref>"
+          id: 151652
+        - token: "<box>"
+          id: 151653
+        - token: "</box>"
+          id: 151654
       prefix_tokens_id: # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
       suffix_tokens_id: # suffix tokens id will be added to the end of the input ids. Empty if not set.
 
+      # multi-modal model config.
+      img_token: "<IMG_CONTEXT>" # image token text.
+      # the beginning token id used to mark the image tokens. Multi img_tokens will be mapped to consecutive token ids
+      # with the beginning token id. The beginning token id must be the (max-token-id + 1), that is the true vocab size.
+      # Such as: "<IMG_TOKEN><IMG_TOKEN><IMG_TOKEN>" will be mapped to
+      # [img_begin_token_id, img_begin_token_id + 1, img_begin_token_id + 2].
+      img_begin_token_id: 151655
+      vit_type: internvl2 # Only support `internvl2` now.
+      vit_path: /tmp/InternVL2-1B/vision_encoder_bfp16.trt # path of vision transformer model.
+      vit_worker_tp: 8 # worker thread pool size for load image, preprocessing, postprocessing...
+      vit_trt_args:
+        streams: 1 # number of streams for trt infer, used for multi-stream parallel infer. More streams will use more gpu memory.
+        #dla_cores: 0 # number of dla cores for trt infer.
+        customized_op_paths: # customized op paths.
+        #  - /path/to/your/customized_op.so
+
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/Qwen2.5-Coder-7B-Instruct/trt_engines/ # path of decoder model. Must be set.
+      gpt_model_path: /tmp/InternVL2-1B/trt_engines/ # path of decoder model. Must be set.
       encoder_model_path: # path of encoder model. Null if not set.
       stop_words: # additional stop words. Empty if not set.
         - "<|im_start|>"
@@ -50,7 +80,7 @@ models:
       max_attention_window_size: # use default (i.e. max_sequence_length) if not set.
       sink_token_length: # use default if not set.
       batch_scheduler_policy: guaranteed_no_evict # must be `max_utilization` or `guaranteed_no_evict`.
-      kv_cache_free_gpu_mem_fraction: 0.9 # will be set to 0.9 or `max_tokens_in_paged_kv_cache` if not set.
+      kv_cache_free_gpu_mem_fraction: 0.6 # will be set to 0.9 or `max_tokens_in_paged_kv_cache` if not set.
       kv_cache_host_memory_bytes: # will be set to 0 if not set.
       kv_cache_onboard_blocks: # will be set to true if not set.
       exclude_input_in_output: true # will be set to false if not set.
