--- a/conf/inference_internvl2-4B.yml
+++ b/conf/inference_internvl2-4B.yml
@@ -7,72 +7,87 @@ models:
     inferer_path:
     inferer_args: # more args of model inferer.
       # llm style used to build prompt(chat or function call) and parse generated response for openai interface.
-      # Current support {`qwen2.5`, `qwen`, `chatglm3`, `glm4`, `internlm2`, `internvl2`}.
-      llm_style: internvl2
+      # Support llm_style see README.md.
+      llm_style: internvl2-phi3
 
       # tokenizer config.
       tokenizer_type: sentencepiece # can be `huggingface`, `sentencepiece`. Must be set.
-      tokenizer_path: /tmp/InternVL2-8B/ # path of tokenizer. Must be set.
+      tokenizer_path: /tmp/InternVL2-4B/ # path of tokenizer. Must be set.
       tokenizer_parallelism: 16 # tokenizers count for parallel tokenization. Will be set to 1 if not set.
       end_token_id: 2 # "</s>"
       pad_token_id: 2 # "</s>"
       skip_special_tokens: # skip special tokens when decoding. Empty if not set.
-        - 92552 # "</box>"
-        - 92551 # "<box>"
-        - 92550 # "</ref>"
-        - 92549 # "<ref>"
-        - 92548 # "</quad>"
-        - 92547 # "<quad>"
-        - 92546 # "<IMG_CONTEXT>"
-        - 92545 # "</img>"
-        - 92544 # "<img>"
-        - 92543 # "<|im_start|>"
-        - 92542 # "<|im_end|>"
-        - 92541 # "<|action_start|>"
-        - 92540 # "<|action_end|>"
-        - 92539 # "<|interpreter|>"
-        - 92538 # "<|plugin|>"
+        - 32019 # "</box>"
+        - 32018 # "<box>"
+        - 32017 # "</ref>"
+        - 32016 # "<ref>"
+        - 32015 # "</quad>"
+        - 32014 # "<quad>"
+        - 32013 # "<IMG_CONTEXT>"
+        - 32012 # "</img>"
+        - 32011 # "<img>"
+        - 32010 # "<|user|>\n"
+        - 32009 # "<|placeholder6|>"
+        - 32008 # "<|placeholder5|>"
+        - 32007 # "<|end|>"
+        - 32006 # "<|system|>\n"
+        - 32005 # "<|placeholder4|>"
+        - 32004 # "<|placeholder3|>"
+        - 32003 # "<|placeholder2|>"
+        - 32002 # "<|placeholder1|>"
+        - 32001 # "<|assistant|>\n"
+        - 32000 # "<|endoftext|>"
         - 0 # "<unk>"
         - 1 # "<s>"
         - 2 # "</s>"
       force_tokens_dict: # will be used to force map tokens to ids when encode and decode instead of using tokenizer. Empty if not set.
         - token: "</box>"
-          id: 92552
+          id: 32019
         - token: "<box>"
-          id: 92551
+          id: 32018
         - token: "</ref>"
-          id: 92550
+          id: 32017
         - token: "<ref>"
-          id: 92549
+          id: 32016
         - token: "</quad>"
-          id: 92548
+          id: 32015
         - token: "<quad>"
-          id: 92547
+          id: 32014
         - token: "<IMG_CONTEXT>"
-          id: 92546
+          id: 32013
         - token: "</img>"
-          id: 92545
+          id: 32012
         - token: "<img>"
-          id: 92544
-        - token: "<|im_start|>"
-          id: 92543
-        - token: "<|im_end|>"
-          id: 92542
-        - token: "<|action_start|>"
-          id: 92541
-        - token: "<|action_end|>"
-          id: 92540
-        - token: "<|interpreter|>"
-          id: 92539
-        - token: "<|plugin|>"
-          id: 92538
+          id: 32011
+        - token: "<|user|>\n"
+          id: 32010
+        - token: "<|placeholder6|>"
+          id: 32009
+        - token: "<|placeholder5|>"
+          id: 32008
+        - token: "<|end|>"
+          id: 32007
+        - token: "<|system|>\n"
+          id: 32006
+        - token: "<|placeholder4|>"
+          id: 32005
+        - token: "<|placeholder3|>"
+          id: 32004
+        - token: "<|placeholder2|>"
+          id: 32003
+        - token: "<|placeholder1|>"
+          id: 32002
+        - token: "<|assistant|>\n"
+          id: 32001
+        - token: "<|endoftext|>"
+          id: 32000
         - token: "<unk>"
           id: 0
         - token: "<s>"
           id: 1
         - token: "</s>"
           id: 2
-      prefix_tokens_id: # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
+      prefix_tokens_id: [ 1, 29871 ] # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
       suffix_tokens_id: # suffix tokens id will be added to the end of the input ids. Empty if not set.
 
       # multi-modal model config.
@@ -81,9 +96,9 @@ models:
       # with the beginning token id. The beginning token id must be the (max-token-id + 1), that is the true vocab size.
       # Such as: "<IMG_TOKEN><IMG_TOKEN><IMG_TOKEN>" will be mapped to
       # [img_begin_token_id, img_begin_token_id + 1, img_begin_token_id + 2].
-      img_begin_token_id: 92553
+      img_begin_token_id: 32020
       vit_type: internvl2 # Only support `internvl2` now.
-      vit_path: /tmp/InternVL2-8B/vision_encoder_bfp16.trt # path of vision transformer model.
+      vit_path: /tmp/InternVL2-4B/vision_encoder_bfp16.trt # path of vision transformer model.
       vit_worker_tp: 8 # worker thread pool size for load image, preprocessing, postprocessing...
       vit_trt_args:
         streams: 1 # number of streams for trt infer, used for multi-stream parallel infer. More streams will use more gpu memory.
@@ -93,11 +108,12 @@ models:
 
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/InternVL2-8B/trt_engines/ # path of decoder model. Must be set.
+      gpt_model_path: /tmp/InternVL2-4B/trt_engines/ # path of decoder model. Must be set.
       encoder_model_path: # path of encoder model. Null if not set.
       stop_words: # additional stop words. Empty if not set.
-        - "<|im_start|>"
-        - "<|im_end|>"
+        - "</s>"
+        - "<|endoftext|>"
+        - "<|end|>"
       bad_words: # additional bad words. Empty if not set.
       max_tokens_in_paged_kv_cache: # use default if not set.
       max_attention_window_size: # use default (i.e. max_sequence_length) if not set.
