--- a/conf/inference_internvl2-4B.yml
+++ b/conf/inference_internvl2-4B.yml
@@ -106,6 +106,12 @@ models:
         customized_op_paths: # customized op paths.
         #  - /path/to/your/customized_op.so
 
+      # default sampling config, sampling param in request will overwrite these. Support sampling params see
+      # @ref(src/constants.h - SamplingConfig)
+      sampling:
+        top_k: 50
+        top_p: 1.0
+
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
       gpt_model_path: /tmp/InternVL2-4B/trt_engines/ # path of decoder model. Must be set.
