--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/tokenizers-cpp"]
 	path = third_party/tokenizers-cpp
 	url = git@github.com:mlc-ai/tokenizers-cpp.git
+[submodule "third_party/pillow-resize"]
+	path = third_party/pillow-resize
+	url = git@github.com:zurutech/pillow-resize.git
