--- a/conf/inference_qwenvl.yml
+++ b/conf/inference_qwenvl.yml
@@ -8,52 +8,33 @@ models:
     inferer_args: # more args of model inferer.
       # llm style used to build prompt(chat or function call) and parse generated response for openai interface.
       # Support llm_style see README.md.
-      llm_style: internvl2-qwen2
+      llm_style: qwenvl
 
       # tokenizer config.
       tokenizer_type: huggingface # can be `huggingface`, `sentencepiece`. Must be set.
-      tokenizer_path: /tmp/InternVL2-1B/ # path of tokenizer. Must be set.
+      tokenizer_path: /tmp/Qwen-VL-Chat/ # path of tokenizer. Must be set.
       tokenizer_parallelism: 16 # tokenizers count for parallel tokenization. Will be set to 1 if not set.
-      end_token_id: 151645 # "<|im_end|>"
+      end_token_id: 151643 # "<|endoftext|>"
       pad_token_id: 151643 # "<|endoftext|>"
       skip_special_tokens: # skip special tokens when decoding. Empty if not set.
         - 151643 # "<|endoftext|>"
         - 151644 # "<|im_start|>"
         - 151645 # "<|im_end|>"
-        - 151646 # "<img>"
-        - 151647 # "</img>"
-        - 151648 # "<IMG_CONTEXT>"
       force_tokens_dict: # will be used to force map tokens to ids when encode and decode instead of using tokenizer. Empty if not set.
-        - token: "<img>"
-          id: 151646
-        - token: "</img>"
-          id: 151647
-        - token: "<IMG_CONTEXT>"
-          id: 151648
-        - token: "<quad>"
-          id: 151649
-        - token: "</quad>"
-          id: 151650
-        - token: "<ref>"
-          id: 151651
-        - token: "</ref>"
-          id: 151652
-        - token: "<box>"
-          id: 151653
-        - token: "</box>"
-          id: 151654
+      #  - token: "<|endoftext|>"
+      #    id: 151643
       prefix_tokens_id: # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
       suffix_tokens_id: # suffix tokens id will be added to the end of the input ids. Empty if not set.
 
       # multi-modal model config.
-      img_token: "<IMG_CONTEXT>" # image token text.
+      img_token: "<imgpad>" # image token text.
       # the beginning token id used to mark the image tokens. Multi img_tokens will be mapped to consecutive token ids
       # with the beginning token id. The beginning token id must be the (max-token-id + 1), that is the true vocab size.
       # Such as: "<IMG_TOKEN><IMG_TOKEN><IMG_TOKEN>" will be mapped to
       # [img_begin_token_id, img_begin_token_id + 1, img_begin_token_id + 2].
-      img_begin_token_id: 151655
-      vit_type: internvl2 # Support vit_type see README.md.
-      vit_path: /tmp/InternVL2-1B/vision_encoder_bfp16.trt # path of vision transformer model.
+      img_begin_token_id: 151936
+      vit_type: qwenvl # Support vit_type see README.md.
+      vit_path: /tmp/Qwen-VL-Chat/vision_encoder_bfp16.trt # path of vision transformer model.
       vit_worker_tp: 8 # worker thread pool size for load image, preprocessing, postprocessing...
       vit_trt_args:
         streams: 1 # number of streams for trt infer, used for multi-stream parallel infer. More streams will use more gpu memory.
@@ -64,12 +45,12 @@ models:
       # default sampling config, sampling param in request will overwrite these. Support sampling params see
       # @ref(src/constants.h - SamplingConfig)
       sampling:
-        top_k: 50
-        top_p: 1.0
+        top_k: 0
+        top_p: 0.3
 
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/InternVL2-1B/trt_engines/ # path of decoder model. Must be set.
+      gpt_model_path: /tmp/Qwen-VL-Chat/trt_engines/ # path of decoder model. Must be set.
       encoder_model_path: # path of encoder model. Null if not set.
       stop_words: # additional stop words. Empty if not set.
         - "<|im_start|>"
@@ -80,7 +61,7 @@ models:
       max_attention_window_size: # use default (i.e. max_sequence_length) if not set.
       sink_token_length: # use default if not set.
       batch_scheduler_policy: guaranteed_no_evict # must be `max_utilization` or `guaranteed_no_evict`.
-      kv_cache_free_gpu_mem_fraction: 0.6 # will be set to 0.9 or `max_tokens_in_paged_kv_cache` if not set.
+      kv_cache_free_gpu_mem_fraction: 0.7 # will be set to 0.9 or `max_tokens_in_paged_kv_cache` if not set.
       kv_cache_host_memory_bytes: # will be set to 0 if not set.
       kv_cache_onboard_blocks: # will be set to true if not set.
       exclude_input_in_output: true # will be set to false if not set.
