--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "third_party/TensorRT-LLM"]
 	path = third_party/TensorRT-LLM
-	url = git@github.com:NVIDIA/TensorRT-LLM.git
+	url = https://github.com/NVIDIA/TensorRT-LLM.git
 [submodule "third_party/tokenizers-cpp"]
 	path = third_party/tokenizers-cpp
-	url = git@github.com:mlc-ai/tokenizers-cpp.git
+	url = https://github.com/mlc-ai/tokenizers-cpp.git
 [submodule "third_party/pillow-resize"]
 	path = third_party/pillow-resize
-	url = git@github.com:zurutech/pillow-resize.git
+	url = https://github.com/zurutech/pillow-resize.git
