--- a/conf/inference_deepseek-r1-distill-llama.yml
+++ b/conf/inference_deepseek-r1-distill-llama.yml
@@ -22,6 +22,11 @@ models:
       prefix_tokens_id: # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
       suffix_tokens_id: # suffix tokens id will be added to the end of the input ids. Empty if not set.
 
+      # default sampling config, sampling param in request will overwrite these. Support sampling params see
+      # @ref(src/constants.h - SamplingConfig)
+      sampling:
+        temperature: 0.6
+
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
       gpt_model_path: /tmp/DeepSeek-R1-Distill-Llama-8B/trt_engines/ # path of decoder model. Must be set.
