--- a/conf/inference_qwq.yml
+++ b/conf/inference_qwq.yml
@@ -8,73 +8,43 @@ models:
     inferer_args: # more args of model inferer.
       # llm style used to build prompt(chat or function call) and parse generated response for openai interface.
       # Support llm_style see README.md.
-      llm_style: phi3
+      llm_style: qwq
 
       # tokenizer config.
-      tokenizer_type: sentencepiece # can be `huggingface`, `sentencepiece`. Must be set.
-      tokenizer_path: /tmp/Phi-3.5-mini-instruct/ # path of tokenizer. Must be set.
+      tokenizer_type: huggingface # can be `huggingface`, `sentencepiece`. Must be set.
+      tokenizer_path: /tmp/QwQ-32B-Preview/ # path of tokenizer. Must be set.
       tokenizer_parallelism: 16 # tokenizers count for parallel tokenization. Will be set to 1 if not set.
-      end_token_id: 32000 # "<|endoftext|>\n"
-      pad_token_id: 32000 # "<|endoftext|>\n"
+      end_token_id: 151645 # "<|im_end|>"
+      pad_token_id: 151643 # "<|endoftext|>"
       skip_special_tokens: # skip special tokens when decoding. Empty if not set.
-        - 32010 # "<|user|>\n"
-        - 32009 # "<|placeholder6|>\n"
-        - 32008 # "<|placeholder5|>\n"
-        - 32007 # "<|end|>\n"
-        - 32006 # "<|system|>\n"
-        - 32005 # "<|placeholder4|>\n"
-        - 32004 # "<|placeholder3|>\n"
-        - 32003 # "<|placeholder2|>\n"
-        - 32002 # " <|placeholder1|>\n"
-        - 32001 # "<|assistant|>\n"
-        - 32000 # "<|endoftext|>\n"
-        - 0 # "<unk>"
-        - 1 # "<s>"
-        - 2 # "</s>"
+        - 151643 # "<|endoftext|>"
+        - 151644 # "<|im_start|>"
+        - 151645 # "<|im_end|>"
+        - 151646 # "<|object_ref_start|>"
+        - 151647 # "<|object_ref_end|>"
+        - 151648 # "<|box_start|>"
+        - 151649 # "<|box_end|>"
+        - 151650 # "<|quad_start|>"
+        - 151651 # "<|quad_end|>"
+        - 151652 # "<|vision_start|>"
+        - 151653 # "<|vision_end|>"
+        - 151654 # "<|vision_pad|>"
+        - 151655 # "<|image_pad|>"
+        - 151656 # "<|video_pad|>"
       force_tokens_dict: # will be used to force map tokens to ids when encode and decode instead of using tokenizer. Empty if not set.
-        - token: "<|user|>\n"
-          id: 32010
-        - token: "<|placeholder6|>\n"
-          id: 32009
-        - token: "<|placeholder5|>\n"
-          id: 32008
-        - token: "<|end|>\n"
-          id: 32007
-        - token: "<|system|>\n"
-          id: 32006
-        - token: "<|placeholder4|>\n"
-          id: 32005
-        - token: "<|placeholder3|>\n"
-          id: 32004
-        - token: "<|placeholder2|>\n"
-          id: 32003
-        - token: "<|placeholder1|>\n"
-          id: 32002
-        - token: "<|assistant|>\n"
-          id: 32001
-        - token: "<|endoftext|>\n"
-          id: 32000
-        - token: "<unk>"
-          id: 0
-        - token: "<s>"
-          id: 1
-        - token: "</s>"
-          id: 2
+      #  - token: "<|endoftext|>"
+      #    id: 151643
       prefix_tokens_id: # prefix tokens id will be added to the beginning of the input ids. Empty if not set.
       suffix_tokens_id: # suffix tokens id will be added to the end of the input ids. Empty if not set.
 
-      # default sampling config, sampling param in request will overwrite these. Support sampling params see
-      # @ref(src/constants.h - SamplingConfig)
-      sampling:
-
       # trtllm config.
       gpt_model_type: inflight_fused_batching # must be `V1`(==`v1`) or `inflight_batching`(==`inflight_fused_batching`).
-      gpt_model_path: /tmp/Phi-3.5-mini-instruct/trt_engines/ # path of decoder model. Must be set.
+      gpt_model_path: /tmp/QwQ-32B-Preview/trt_engines/ # path of decoder model. Must be set.
       encoder_model_path: # path of encoder model. Null if not set.
       stop_words: # additional stop words. Empty if not set.
-        - "<|assistant|>\n"
-        - "<|endoftext|>\n"
-        - "<|end|>\n"
+        - "<|im_start|>"
+        - "<|im_end|>"
+        - "<|endoftext|>"
       bad_words: # additional bad words. Empty if not set.
       max_tokens_in_paged_kv_cache: # use default if not set.
       max_attention_window_size: # use default (i.e. max_sequence_length) if not set.
