ADD: Add gemma3 text llm support.(experimental)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,6 +116,7 @@ set(COMMON_SRCS
         ${CMAKE_CURRENT_SOURCE_DIR}/vit/qwen2vl_vit.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/vit/janus_pro_vit.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/vit/intern_video_2_5_vit.cc
+        ${CMAKE_CURRENT_SOURCE_DIR}/vit/gemma3_vit.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/tokenizer.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/grps_cli.cc
 )
