--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "third_party/TensorRT-LLM"]
 	path = third_party/TensorRT-LLM
-	url = https://github.com/NVIDIA/TensorRT-LLM.git
+	url = https://github.com/NetEase-Media/TensorRT-LLM.git
 [submodule "third_party/tokenizers-cpp"]
 	path = third_party/tokenizers-cpp
 	url = https://github.com/mlc-ai/tokenizers-cpp.git
